--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>AudioWorklet Wav</title>
+    <meta
+      name="description"
+      content="This is a sample of exporting a wav file using AudioWorklet API."
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="script.js" type="module"></script>
   </head>
 
   <body>
-    <button id="record">Record</button>
-    <ul id="fileList"></ul>
-
-    <script src="script.js" type="text/javascript"></script>
+    <button>Record</button>
+    <ul></ul>
   </body>
 </html>
